# CS220_Framework

./: CMakeLists.txt  Makefile  README.md  run.sh
Headers/: CMakeLists.txt  Comparators.h  comparators.h  grid.h  hadlock.h  lee2bit.h  lee3bit.h  leebase.h  leenode.h  leeoriginal.h  map.h  node.h  ruben.h
Source/: CMakeLists.txt  grid.cc  hadlock.cc  lee2bit.cc  lee3bit.cc  leebase.cc  leebase.cpp  leenode.cc  leenode.cpp  leeoriginal.cc  leeoriginal.cpp  main.cc  map.cc  map.cpp  node.cc  ruben.cc
Tests/: blocker_fail.json  blocker_success.json  debug.json  debug_fail.json  debug_hard.json  debug_intersection.json  debug_tiny.json  fails.json  hadlock_simple.json  intersection_fail.json  intersection_success.json  medium.json  placement_checker.json
Utilities/: CMakeLists.txt
